Fix crash in CompressedTexSubImage taking 0 offset without pbo

DCHECK is triggered: "FATAL:gles2_implementation.cc(663)] Check failed:
data. " before this CL.

BUG=679678
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2644483002
Cr-Commit-Position: refs/heads/master@{#444564}

Former-commit-id: a5e49a2b2acf7ef4a79030c06589dde1e2ca3684